--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -23,9 +23,26 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  opacity: 1; /* Initially hidden */
+   /* Initially hidden */
   transition: opacity 2s ease-in; /* Add a transition for opacity change */
   z-index: 2;
+
+  opacity: 0;
+  animation-name: shownum;
+  animation-duration: 1.25s;
+  animation-delay: 0.25s;
+  animation-fill-mode: forwards;
+
+}
+
+
+@keyframes shownum {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .text {
