--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -18,45 +18,43 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7); /* Dark greyish overlay */
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-   /* Initially hidden */
-  transition: opacity 2s ease-in; /* Add a transition for opacity change */
-  z-index: 2;
-
-  opacity: 0;
-  animation-name: shownum;
-  animation-duration: 1.25s;
-  animation-delay: 0.25s;
-  animation-fill-mode: forwards;
-
-}
-
-
-@keyframes shownum {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.text {
-  color: white;
-  font-family: 'Playfair Display';
-  font-size: 8rem;
-  opacity: 1; /* Initially hidden */
-  transition: opacity 2s ease-in;
-}
-
-.subText{
+  background: rgba(0, 0, 0, 0.8);
   color: white;
   font-size: 2rem;
   opacity: 1;
+  // animation: fadeIn 0.025s forwards;
+}
+
+// @keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
+
+//   10% {
+//     opacity: 1;
+//   }
+
+//   100% {
+//     opacity: 1;
+//   }
+// }
+
+.text {
+  color: white;
+  font-family: "Playfair Display";
+  font-size: 5rem;
+  transition: opacity 1s ease-in;
+}
+
+.subText {
+  color: white;
+  font-size: 2rem;
+  margin-top: 1rem;
+  transition: opacity 1s ease-in;
 }
 
 // .overlay.active,
